# symbol-mutator

./: .gitignore  AGENTS.md  BENCHMARK.md  Makefile  README.md  ROADMAP.md  pyproject.toml
data/benchmark/targets/: fastapi_snippet.py  flask_snippet.py  loguru_snippet.py  numpy_snippet.py  pydantic_snippet.py  requests_snippet.py  wheel_snippet.py
src/symbol_mutator/: __init__.py  benchmark.py  cli.py  core.py  llm.py
tests/: test_mutator.py
